开发团队划分

--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -4,8 +4,26 @@
 
 ![image](https://github.com/user-attachments/assets/c9e4c117-23f8-47f9-a0e5-fa46178b0a50)
 
+研发流程各环节：
 - 需求分析
 - 产品设计
 - UI设计
 - 开发和测试
 - 部署交付
+
+## 团队划分
+
+### 按职能划分团队
+
+- 产品团队
+- 后端开发团队
+- UI 设计团队
+- 前端开发团队
+- 运维和测试团队
+- 移动开发团队
+按职能来划分团队，每个团队有一个团队负责人。
+
+### 跨职能团队
+
+跨职能团队一般是基于某个产品、项目 或功能特性来组织一个团队，在这个团队内，就可以完成开发并交付成果。
+
