跨部门团队

--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -21,9 +21,25 @@
 - 前端开发团队
 - 运维和测试团队
 - 移动开发团队
-按职能来划分团队，每个团队有一个团队负责人。
+按职能来划分团队，每个团队有一个团队负责人，比如小组长。
+
+组织结构如下图：
+
+![image](https://github.com/user-attachments/assets/8f205449-20b9-45c2-af5f-0b9657160f15)
 
 ### 跨职能团队
 
-跨职能团队一般是基于某个产品、项目 或功能特性来组织一个团队，在这个团队内，就可以完成开发并交付成果。
+跨职能团队一般是基于某个产品、项目 或功能特性来组织一个团队，在这个团队内，就可以完成需求、开发、并交付成果，然后进行下一个产品特性开发。
+这样的团队由 产品、UI、后端开发、运维测试、交付等组成一个跨职能的全功能开发团队。
+
+![image](https://github.com/user-attachments/assets/c85134c4-f91b-474e-a821-4d975fc9c07d)
+
+### 架构师团队
+
+在稍微大一点公司里，可能还有一些公共技术团队，比如架构师团队，这个团队基本职责是负责公司的项目的技术架构设计、攻坚技术难题，还可能负责公司技术基础设施建设。
+
+### 跨部门团队
+
+有的公司可能按照技术职责组成一个委员会，来解决公司内遇到的各种技术、沟通、协调等问题。
+
 
