--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -30,16 +30,67 @@
 ### 跨职能团队
 
 跨职能团队一般是基于某个产品、项目 或功能特性来组织一个团队，在这个团队内，就可以完成需求、开发、并交付成果，然后进行下一个产品特性开发。
-这样的团队由 产品、UI、后端开发、运维测试、交付等组成一个跨职能的全功能开发团队。
+这样的团队成员组成由 产品、UI、后端开发、运维测试、交付等组成一个跨职能的全功能开发团队。
 
 ![image](https://github.com/user-attachments/assets/c85134c4-f91b-474e-a821-4d975fc9c07d)
 
 ### 架构师团队
 
 在稍微大一点公司里，可能还有一些公共技术团队，比如架构师团队，这个团队基本职责是负责公司的项目的技术架构设计、攻坚技术难题，还可能负责公司技术基础设施建设。
+开发人数较少的公司可能没有架构师团队，那怎么办？一般由技术经理来兼任架构师的职责。
 
 ### 跨部门团队
 
-有的公司可能按照技术职责组成一个委员会，来解决公司内遇到的各种技术、沟通、协调等问题。
+有的公司可能按照职能职责组成一个一个的委员会，来解决公司内遇到的各种技术、沟通、协调等问题。
+比如说技术委员会，公司最高技术决策组织，里面成员有 CTO 、各技术组长、架构师，他们通过沟通、讨论和解决公司里遇到的各种技术难题。
+产品与设计委员会，成员由CTO、产品经理、设计师、架构师、业务员等组成，评审产品项目、各种需求等，解决公司产品相关问题。
 
+![image](https://github.com/user-attachments/assets/fe9e62e5-e49e-4422-a129-52ba65fd21be)
 
+## 需求分析
+
+### 什么是需求
+
+什么是需求？在经济学中**需求**是消费者愿意并且能够在给定时间段内以不同价格购买的商品数量。
+在产品中，需求又是什么？
+从问题角度来理解，在某个场景下，用户为了解决某个问题。
+从心里角度来理解，在某个场景下，为了实现用户内心的某种欲望。
+
+>需求 = 用户 + 场景 + 问题
+
+### 怎么获取用户需求
+
+首先需要洞察用户需求，将洞察到的用户需求收集起来，然后进行分析 - 需求分析。分析真需求和伪需求，然后形成一份需求文档。
+洞察用户需求，把自己想象成用户，进入到用户的场景里去。这就是马化腾说的5秒钟进入用户状态。
+第二可以实地考察，进行用户访谈来了解用户的需求。
+第三可以用调查问卷的方式进行需求收集。
+第四可以借助第三方的数据或对自身产品数据进行分析，获取需求。
+第五可以进行竞品分析，获取需求。
+等等一些需求洞察的方法。
+
+![image](https://github.com/user-attachments/assets/e14e620b-d185-464b-a87a-a2e95ffa65c0)
+
+（需求收集分析）步骤图
+
+### 用户分析
+
+比如用户年龄、学历、兴趣爱好等进行分析，确定哪些用户是目标用户，然后可以进行需求分析。
+
+### 需求分析
+
+需求分析步骤：
+需求过滤 -> 需求审核（审核需求真伪） -> 需求分类 -> 需求排序（优先级）
+
+- **需求过滤**：一些低级需求去掉，一些需求内容不完整、格式不对的需求，这些需要产经理继续去沟通、完善这份需求。
+- **需求审核**：评估需求是否真实存在，需求对产品、业务是否有价值，没有话需要去掉或重新收集需求。
+- **需求分类**：对正式需求进行分类，后续将对不同需求采取不同处理方式。一个产品可能有很多不同产品小组，哪个产品小组承接这个需求。
+- **需求优先级排序**：对需求进行优先级排序，高优先级的需求优先做，因为开发资源是有限的。
+
+KANO模型介绍：
+
+KANO模型是由东京理工大学教授狩野纪昭（Noriaki Kano）和他的同事 Fumio Takahashi 联合建立的用户对产品功能满意度模型。在需求分析中一般用来进行需求分类和优先级排序的工具。
+KANO 模型可用于定性分析用户对新功能的接受度。
+
+该模型核心理念：
+
+>用户对产品或服务的满意度并不是简单地随着功能的增加而成正比例提升，而是呈现出更为复杂的非线性关系。
