--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -42,7 +42,9 @@
 ### 跨部门团队
 
 有的公司可能按照职能职责组成一个一个的委员会，来解决公司内遇到的各种技术、沟通、协调等问题。
+
 比如说技术委员会，公司最高技术决策组织，里面成员有 CTO 、各技术组长、架构师，他们通过沟通、讨论和解决公司里遇到的各种技术难题。
+
 产品与设计委员会，成员由CTO、产品经理、设计师、架构师、业务员等组成，评审产品项目、各种需求等，解决公司产品相关问题。
 
 ![image](https://github.com/user-attachments/assets/fe9e62e5-e49e-4422-a129-52ba65fd21be)
@@ -61,11 +63,12 @@
 ### 怎么获取用户需求
 
 首先需要洞察用户需求，将洞察到的用户需求收集起来，然后进行分析 - 需求分析。分析真需求和伪需求，然后形成一份需求文档。
-洞察用户需求，把自己想象成用户，进入到用户的场景里去。这就是马化腾说的5秒钟进入用户状态。
-第二可以实地考察，进行用户访谈来了解用户的需求。
-第三可以用调查问卷的方式进行需求收集。
-第四可以借助第三方的数据或对自身产品数据进行分析，获取需求。
-第五可以进行竞品分析，获取需求。
+- 洞察用户需求，把自己想象成用户，进入到用户的场景里去。这就是马化腾说的5秒钟进入用户状态。
+- 第二可以实地考察，进行用户访谈来了解用户的需求。
+- 第三可以用调查问卷的方式进行需求收集。
+- 第四可以借助第三方的数据或对自身产品数据进行分析，获取需求。
+- 第五可以进行竞品分析，获取需求。
+  
 等等一些需求洞察的方法。
 
 ![image](https://github.com/user-attachments/assets/e14e620b-d185-464b-a87a-a2e95ffa65c0)
