用户分析 业务分析

--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -79,17 +79,20 @@
 
 比如用户年龄、学历、兴趣爱好等进行分析，确定哪些用户是目标用户，然后可以进行需求分析。
 
-### 需求分析
+### 需求分析步骤
 
 需求分析步骤：
-需求过滤 -> 需求审核（审核需求真伪） -> 需求分类 -> 需求排序（优先级）
+
+>需求过滤 -> 需求审核（审核需求真伪） -> 需求分类 -> 需求排序（优先级）
+>
+>后面是需求实现，需求交付和验证。
 
 - **需求过滤**：一些低级需求去掉，一些需求内容不完整、格式不对的需求，这些需要产经理继续去沟通、完善这份需求。
 - **需求审核**：评估需求是否真实存在，需求对产品、业务是否有价值，没有话需要去掉或重新收集需求。
 - **需求分类**：对正式需求进行分类，后续将对不同需求采取不同处理方式。一个产品可能有很多不同产品小组，哪个产品小组承接这个需求。
 - **需求优先级排序**：对需求进行优先级排序，高优先级的需求优先做，因为开发资源是有限的。
 
-KANO模型介绍：
+一种需求分析模型，KANO模型介绍：
 
 KANO模型是由东京理工大学教授狩野纪昭（Noriaki Kano）和他的同事 Fumio Takahashi 联合建立的用户对产品功能满意度模型。在需求分析中一般用来进行需求分类和优先级排序的工具。
 KANO 模型可用于定性分析用户对新功能的接受度。
@@ -97,3 +100,35 @@ KANO 模型可用于定性分析用户对新功能的接受度。
 该模型核心理念：
 
 >用户对产品或服务的满意度并不是简单地随着功能的增加而成正比例提升，而是呈现出更为复杂的非线性关系。
+
+KANO模型图：
+
+![image](https://github.com/user-attachments/assets/c110a7b1-1ee1-49eb-ac4d-c82e21526b9a)
+
+KANO模型需求分类：
+
+- **必备型需求（属性 ）**（一定要有）：有的也译作基本型需求（属性）。用户认为理所应当、必须要有的需求，这些需求必须被满足。当这些需求不被满足时，也就是不提供这些需求，用户满意度会大幅降低；当这些需求被满足时，用户满意度不会得到提升。例如：手机打电话、发短信。
+- **期望型需求（属性）**：满足此需求时，用户满意度会提升；不满足此需求时，用户满意度会降低。
+- **魅力型需求（属性）**：用户对这种需求没有太大期望，需要产品经理对用户有深刻的洞察才能挖掘到此隐性需求，属于给用户惊喜的需求。不满足此需求，用户满意度不会降低；满足此需求，用户满意度会急剧提升。有时是产品很 有竞争力的体现。
+- **无差异需求（属性）**：无论是否满足此需求，对用户满意度都不会产生影响。
+
+- ***反向型需求（属性）***：有无此类需求，用户根本不在意。若满足此需求，用户满意度反而会下降。
+
+>它们的优先级排序为：
+>必备型需求 > 期望型需求 > 魅力型需求 > 无差异需求
+
+> KANO模型的分析步骤包括：问卷收集→数据清洗→属性归属分析→Better-Worse系数计算。
+
+### 用户分析
+
+比如用户年龄、学历、兴趣爱好等进行分析，搞清楚用户画像，确定哪些用户是目标用户，然后进一步进行用户需求分析。
+
+### 业务分析
+
+业务分析中的一些概念：
+
+业务目标，业务流程分析，关键业务流程是什么，业务场景有哪些，业务对象有哪些，业务对象之间关系是什么？业务活动有哪些，业务规则是什么，相关角色有哪些？抽象出业务模型。
+
+图解业务，比如用 UML 绘图，绘制出业务各步骤、用例图、业务流程图 等。
+
+
