--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -131,4 +131,85 @@ KANO模型需求分类：
 
 图解业务，比如用 UML 绘图，绘制出业务各步骤、用例图、业务流程图 等。
 
+## 产品设计
 
+### 产品方案设计
+
+![image](https://github.com/user-attachments/assets/67fd2644-3147-419a-978d-d05a8b816249)
+
+
+用户和业务需求 -> 产品定义 -> 产品解决方案 -> 详细设计
+
+上面把用户需求和业务需求分析完成后，就要进行产品定义 。
+
+- 产品定义：把用户和业务需求转换为产品实现的描述，形成产品需求。
+- 产品解决方案：产品定义完成后，可以有多种方案来实现产品，就可以进一步来讨论哪种方案更合适。
+> 总体解决方案，产品架构设计，子系统设计，业务模块设计等等。
+- 详细设计：各个模块的功能清单，各种功能详情说明，模块之间的关系、接口详情等
+
+### 产品PRD
+
+产品经理可以输出一份产品 PRD 文档，这份文档是面向后端开发、前端开发、交互设计、QA测试的一份文档。
+
+PRD 文档组成：
+
+- 需求背景说明
+- 产品流程图
+- 功能清单
+- 功能详情
+- 迭代路线图
+- 产品原型图
+
+这里很重要的产品原型图，画出了产品的界面、功能、操作、规则等。
+产品原型设计工具有Axure、蓝湖、Figma等工具软件。
+
+## UI设计
+
+根据产品经理画出的原型图，设计产品 UI、交互设计。
+
+## 开发和测试
+
+到这一步，就是产品的真正实现了。
+
+### 架构设计
+
+- 系统架构：
+
+> 根据上面的产品架构文档，PRD 文档来设计应用系统。
+> 系统设计：
+> 1. 需要设计成多个应用系统吗？按照产品生命周期的 4 个周期，在第一个周期里，从 0 开发的产品不需要划分多个应用系统。单个应用系统就可以。
+> 2. 子系统和模块：如果应用系统不复杂，也不需要划分子系统。直接把单应用系统进行模块划分。
+> 
+> 架构选型：单体架构足矣。
+
+最后可以画出一份应用系统架构图。
+
+- 技术架构：技术选型和进行整体技术架构设计，出一份设计图。
+- 模块和类设计：模块的划分，模块里类设计。类的各种关系、接口。
+- 数据库设计：数据库字段设计。
+- API 接口设计：与前端交互的 API 接口设计以及其它接口设计，比如第三方接口。
+
+> 上面的设计都可以产出对应的技术文档。
+
+### 开发实现
+
+可以采取敏捷开发的方法，迭代的方式进行产品功能开发。每一个开发周期实现一个产品目标。
+
+Scrum 敏捷开发方法：
+
+> - 产品负责人负责产品待办事项（Product Backlog），并进行优先级排序。
+> -  敏捷负责人负责迭代计划（Sprint Planning）。每一个迭代周期（通常为1-4周）从迭代计划里筛选出冲刺的任务进行开发，然后交付增量迭代成果。
+> - 开发团队成员每天进行简短的站立会议，分享进度、计划以及遇到的问题。
+> - 每一个迭代周期完成后，要进行评审会议，展示交付的成果，并收集相关反馈。
+> - 每一个迭代周期完成后，进行回顾会议，复盘哪些做得好，哪些做得不好，并制定改进措施。
+
+### 持续集成与测试
+
+完成冲刺后，源代码提交到 Gitlab 代码存储库中，然后触发构建，完成代码覆盖率、单元测试等成功后，完成构建，构建结构可以存储在 artifactory 中，然后部署到测试环境中。
+QA 测试团队进行 QA 测试，性能测试 和回归测试。QA 团队测试通过，则部署到 UAT（User Acceptance Test 用户验收测试） 环境中。如果 UAT 测试通过，则成为部署到生产环境的候选版本。
+
+## 部署交付
+
+如果上面的测试全部通过，测试部门同意上线，则建立相应的 tag 版本，准备上线。
+
+运维团队建立好上线的时间，上线的版本号，评估上线后的影响范围。
