--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -205,7 +205,8 @@ Scrum 敏捷开发方法：
 
 ### 持续集成与测试
 
-完成冲刺后，源代码提交到 Gitlab 代码存储库中，然后触发构建，完成代码覆盖率、单元测试等成功后，完成构建，构建结构可以存储在 artifactory 中，然后部署到测试环境中。
+完成冲刺后，源代码提交到 Gitlab 代码存储库中，然后触发构建，完成代码覆盖率、单元测试等成功后，完成构建，构建结果可以存储在 artifactory 中，然后部署到测试环境中。
+
 QA 测试团队进行 QA 测试，性能测试 和回归测试。QA 团队测试通过，则部署到 UAT（User Acceptance Test 用户验收测试） 环境中。如果 UAT 测试通过，则成为部署到生产环境的候选版本。
 
 ## 部署交付
