业务架构 产品架构 应用架构

--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -173,6 +173,17 @@ PRD 文档组成：
 
 ### 架构设计
 
+架构设计，一般可分为：业务架构、产品架构、应用架构、数据架构、技术架构。
+
+![image](https://github.com/user-attachments/assets/a32670d3-ca51-4cb7-9041-a80f8ea15aa9)
+
+- 业务架构可以是对业务整体分析完成后，业务可以由哪些业务系统组成。
+- 产品架构对应着业务架构，一种产品的实现是对业务的一种实现，所以往往业务架构和产品架构图有很多相似处。
+应用架构、数据架构、技术架构 这 3 种架构相对来说，是技术层面的架构。
+- 应用架构对应着产品架构，开发的应用系统有哪些组成。
+- 数据架构是关于数据设计、数据管理、数据分析等。
+- 技术架涉及到具体技术系统架构、应用技术架构等。
+
 - 系统架构：
 
 > 根据上面的产品架构文档，PRD 文档来设计应用系统。
@@ -184,12 +195,14 @@ PRD 文档组成：
 
 最后可以画出一份应用系统架构图。
 
-- 技术架构：技术选型和进行整体技术架构设计，出一份设计图。
+- 应用技术架构：技术选型和进行整体技术架构设计，出一份设计图。例如使用SpringBoot、MySQL、Kafka 进行架构与开发。
 - 模块和类设计：模块的划分，模块里类设计。类的各种关系、接口。
 - 数据库设计：数据库字段设计。
 - API 接口设计：与前端交互的 API 接口设计以及其它接口设计，比如第三方接口。
 
 > 上面的设计都可以产出对应的技术文档。
+
+数据架构：数据管理，数据分析
 
 ### 开发实现
 
