--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -179,10 +179,14 @@ PRD 文档组成：
 
 - 业务架构可以是对业务整体分析完成后，业务可以由哪些业务系统组成。
 - 产品架构对应着业务架构，一种产品的实现是对业务的一种实现，所以往往业务架构和产品架构图有很多相似处。
-应用架构、数据架构、技术架构 这 3 种架构相对来说，是技术层面的架构。
+  
 - 应用架构对应着产品架构，开发的应用系统有哪些组成。
 - 数据架构是关于数据设计、数据管理、数据分析等。
 - 技术架涉及到具体技术系统架构、应用技术架构等。
+
+> 应用架构、数据架构、技术架构 这 3 种架构相对来说，是技术层面的架构。
+
+### 技术架构
 
 - 系统架构：
 
