--- a/03产品技术研发流程说明.md
+++ b/03产品技术研发流程说明.md
@@ -163,6 +163,8 @@ PRD 文档组成：
 这里很重要的产品原型图，画出了产品的界面、功能、操作、规则等。
 产品原型设计工具有Axure、蓝湖、Figma等工具软件。
 
+最后，PRD文档的评审工作。
+
 ## UI设计
 
 根据产品经理画出的原型图，设计产品 UI、交互设计。
