--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -2,3 +2,7 @@
 
 用户故事（User Story）是用来对软件或用户有价值功能的描述，是对需求的一种描述。
 它从用户的角度出发，用来描述用户的需求。
+
+
+![image](https://github.com/user-attachments/assets/a50a21d5-f9e5-4e9b-9061-b36b9ffafd23)
+
