--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -1,8 +1,13 @@
-## 什么是用户故事
+![image](https://github.com/user-attachments/assets/634ce438-728e-4022-af59-541c9da7f4a5)## 什么是用户故事
 
 用户故事（User Story）是用来对软件或用户有价值功能的描述，是对需求的一种描述。
 它从用户的角度出发，用来描述用户的需求。
 
 
 ![image](https://github.com/user-attachments/assets/a50a21d5-f9e5-4e9b-9061-b36b9ffafd23)
+
+
+![image](https://github.com/user-attachments/assets/db351c28-412f-4741-a69a-fdf500d26da7)
+
+
 
