--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/634ce438-728e-4022-af59-541c9da7f4a5)## 什么是用户故事
+## 什么是用户故事
 
 用户故事（User Story）是用来对软件或用户有价值功能的描述，是对需求的一种描述。
 它从用户的角度出发，用来描述用户的需求。
