--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -1,13 +1,74 @@
 ## 什么是用户故事
 
 用户故事（User Story）是用来对软件或用户有价值功能的描述，是对需求的一种描述。
-它从用户的角度出发，用来描述用户的需求。
+它从用户的角度出发，用来描述用户的需求，用来表达用户需求的方式之一。
+也是程序开发、产品经理、利益相关者关于需求交流的工具。
 
+## 用户故事三要素
+
+用户故事是用来描述用户需求的一种方式，一份用户故事的组成要素有哪些？
+它一般由 3 个要素组成：
 
 ![image](https://github.com/user-attachments/assets/a50a21d5-f9e5-4e9b-9061-b36b9ffafd23)
 
+- **角色（who）**：谁使用。
+- **活动（what）**：要完成什么活动。每个用户故事都是唯一的。
+- **价值（value）**：为什么这么做？提供了什么价值。给用户带来什么价值？产生什么商业价值？实现什么业务目标？
+
+## 用户故事内容包含哪些
+
+上面是对用户故事包含要素的简短概述。在《敏捷软件开发：用户故事实战》一书中描述了一份用户故事需要包含 3 方面内容：
+
+- 一份故事的书面描述。
+- 有关故事的交谈，用于充实故事的细节。为了获取用户故事的细节，需要与相关人员沟通交谈来获取故事详细细节。
+- 记录故事细节的测试，用来验证故事是否完成。
+
+## 用卡片描述用户故事内容
+
+用什么工具能快速、便捷，准确的描述和记录用户故事呢？答：卡片描述记录。
+
+对于用户故事的描述，另外一个人荣恩 (Ron Jeffries) 用 3 个单词简明概括了上节里用户故事 3 方面内容，3 个英文单词如下：
+
+- **卡片(Card)**
+- **交谈(Conversation)**
+- **确认(Confirmation)**
 
 ![image](https://github.com/user-attachments/assets/db351c28-412f-4741-a69a-fdf500d26da7)
 
+> 卡片（Card）包含了用户故事的文字概括说明，需求的详细细节需要在交谈（Conversation）中获得，在确认（Confirmation）环节记录并加以验证。
+### 卡片 Card
 
+在小卡片上写着用户故事的简短描述、规则和完成验收标准。
+
+- 卡片正面写用户故事三要素描述，格式为：
+
+> 作为一个<角色>，我想要<完成活动>，以便于<实现价值>。
+
+- 卡片背面写用户故事的规则和完成验收标准，格式为：
+
+> Given…When…Then，给用户一个 xxx 功能，在 xxx 时候的 xxx 情况下使用，然后 xxx（成功/失败/错误）
+
+举一个简单例子：
+
+> 场景：用户凭手机号和验证码登录软件系统。
+> 
+> - Given：用户用手机号登录系统。
+> - When：当我在界面上输入手机号，然后点击获取验证码，输入验证码登录系统。
+> - Then：输入了正确的验证码，成功登录进系统。
+
+### 交谈 Conversation
+
+用户故事的细节来源是与用户/客户、产品利益相关者的沟通交流，与所有利益相关者对话交谈，并在对话基础上的理解，整理出需求。然后需要确保各方对用户故事的理解相一致。
+
+这其实是怎么挖掘用户需求详情和细节的方法，与用户/客户交流对谈就是其中一种。
+
+### 确认 Confirmation
+
+通过验收测试，来确认每个用户故事被正确的完成了。
+
+> 一般是对操作业务规则的验证。比如验证用户登录系统功能：
+> 
+> 1、在输入错误手机号的条件下，会出现 xxx 错误提示，登录失败。
+> 2、在验证码输入超时情况下，会出现 xxx 提示，登录失败。
+> 3、测试输入过期手机号码，会出现 xxx 提示，登录失败。
 
