--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -73,4 +73,8 @@
 > 2、在验证码输入超时情况下，会出现 xxx 提示，登录失败。
 > 
 > 3、测试输入过期手机号码，会出现 xxx 提示，登录失败。
+>
+
+![image](https://github.com/user-attachments/assets/01eb4a1b-936f-4bbe-a041-c7180c973c64)
+
 
