--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -2,7 +2,7 @@
 
 用户故事（User Story）是用来对软件或用户有价值功能的描述，是对需求的一种描述。
 它从用户的角度出发，用来描述用户的需求，用来表达用户需求的方式之一。
-也是程序开发、产品经理、利益相关者关于需求交流的工具。
+也是程序开发人员、产品经理、利益相关者关于需求交流的一种媒介。
 
 ## 用户故事三要素
 
@@ -12,10 +12,12 @@
 ![image](https://github.com/user-attachments/assets/a50a21d5-f9e5-4e9b-9061-b36b9ffafd23)
 
 - **角色（who）**：谁使用。
-- **活动（what）**：要完成什么活动。每个用户故事都是唯一的。
+- **活动（what）**：要完成什么活动。系统提供了什么功能？
 - **价值（value）**：为什么这么做？提供了什么价值。给用户带来什么价值？产生什么商业价值？实现什么业务目标？
 
-## 用户故事内容包含哪些
+>作为一个<角色>，我想要<完成活动>，以便<达到目的/实现价值>
+
+## 用户故事包含哪些内容
 
 上面是对用户故事包含要素的简短概述。在《敏捷软件开发：用户故事实战》一书中描述了一份用户故事需要包含 3 方面内容：
 
