--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -38,7 +38,9 @@
 ![image](https://github.com/user-attachments/assets/db351c28-412f-4741-a69a-fdf500d26da7)
 
 > 卡片（Card）包含了用户故事的文字概括说明，需求的详细细节需要在交谈（Conversation）中获得，在确认（Confirmation）环节记录并加以验证。
+
 ### 卡片 Card
+
 
 在小卡片上写着用户故事的简短描述、规则和完成验收标准。
 
@@ -68,6 +70,8 @@
 
 通过验收测试，来确认每个用户故事被正确的完成了。
 
+验收测试格式举例：
+
 > 一般是对操作业务规则的验证。比如验证用户登录系统功能：
 > 
 > 1、在输入错误手机号的条件下，会出现 xxx 错误提示，登录失败。
@@ -75,7 +79,8 @@
 > 2、在验证码输入超时情况下，会出现 xxx 提示，登录失败。
 > 
 > 3、测试输入过期手机号码，会出现 xxx 提示，登录失败。
->
+
+一些测试的方法：1、功能测试（单元测试）2、交互测试（集成测试）3、自动化测试（持续交付测试）4、性能测试（压力测试）
 
 ![image](https://github.com/user-attachments/assets/01eb4a1b-936f-4bbe-a041-c7180c973c64)
 
