--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -1,8 +1,10 @@
 ## 什么是用户故事
 
-用户故事（User Story）是用来对软件或用户有价值功能的描述，是对需求的一种描述。
+用户故事（User Story）是用来对软件或用户有价值功能的简短描述，是对需求的一种描述。它清晰简洁的传达了用户想要的功能。
+
 它从用户的角度出发，用来描述用户的需求，用来表达用户需求的方式之一。
-也是程序开发人员、产品经理、利益相关者关于需求交流的一种媒介。
+
+它也是程序开发人员、产品经理、利益相关者关于需求交流的一种媒介。
 
 ## 用户故事三要素
 
