--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -2,7 +2,9 @@
 
 用户故事（User Story）是用来对软件或用户有价值功能的简短描述，是对需求的一种描述。它清晰简洁的传达了用户想要的功能。
 
-它从用户的角度出发，用来描述用户的需求，用来表达用户需求的方式之一。
+它从用户角度出发，用来描述用户的需求，用来表达用户需求的方式之一。
+
+它从用户角度出发，解释了用户所期望得到的结果。用户故事清楚的解释了新功能给用户提供的价值，而不仅仅专注于功能。
 
 它也是程序开发人员、产品经理、利益相关者关于需求交流的一种媒介。
 
