user story card

--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -64,6 +64,8 @@
 > - When：当我在界面上输入手机号，然后点击获取验证码，输入验证码登录系统。
 > - Then：输入了正确的验证码，成功登录进系统。
 
+![image](https://github.com/user-attachments/assets/f63d582a-78ee-47f1-a355-80e77670d1e4)
+
 ### 交谈 Conversation
 
 用户故事的细节来源是与用户/客户、产品利益相关者的沟通交流，与所有利益相关者对话交谈，并在对话基础上的理解，整理出需求。然后需要确保各方对用户故事的理解相一致。
