--- a/04-用户故事与敏捷开发.md
+++ b/04-用户故事与敏捷开发.md
@@ -88,6 +88,10 @@
 
 一些测试的方法：1、功能测试（单元测试）2、交互测试（集成测试）3、自动化测试（持续交付测试）4、性能测试（压力测试）
 
+## 好故事的六个特征 INVEST
+
+好故事的六个特征 INVEST，它由六个英文首字母组成：
+
 ![image](https://github.com/user-attachments/assets/01eb4a1b-936f-4bbe-a041-c7180c973c64)
 
 
