--- a/07-敏捷开发：用户故事估算方法介绍.md
+++ b/07-敏捷开发：用户故事估算方法介绍.md
@@ -1,3 +1,14 @@
 用户故事估算方法
 
+## 估算介绍
+
+用户故事的开发工作量，如何估算一个用户故事开发工作量？估算开发任务工作量是一件很困难的事情，它需要考虑的因素有很多，包括故事的大小、业务复杂度、难度、业务规则、开发人员能力差异等等。
+
+虽然很困难，但还是有一些估算的方法，帮助 Scrum 团队对开发任务进行高效估算。下面介绍几种估算的方法。
+
+估算在 Scrum 的哪个环节呢？
+
+>一般在 Sprint 计划会议上。
+>当产品负责人和 Scrum 团队人员选择好了 Sprint backlog 里的待开项，也对大的开发项进行了拆分。对不理解的一些开发项，相关负责人也进行了解释，团队成员理解也达成了一致。这时就可以进行开发任务工作量的估算了。
+
 ![image](https://github.com/user-attachments/assets/8ba6eb96-f177-45e6-830a-6729237f9007)
