故事点估算单位

--- a/07-敏捷开发：用户故事估算方法介绍.md
+++ b/07-敏捷开发：用户故事估算方法介绍.md
@@ -12,3 +12,7 @@
 >当产品负责人和 Scrum 团队人员选择好了 Sprint backlog 里的待开项，也对大的开发项进行了拆分。对不理解的一些开发项，相关负责人也进行了解释，团队成员理解也达成了一致。这时就可以进行开发任务工作量的估算了。
 
 ![image](https://github.com/user-attachments/assets/8ba6eb96-f177-45e6-830a-6729237f9007)
+
+
+![故事点估算单位介绍](https://github.com/user-attachments/assets/9b29f798-0c06-4101-9a06-256d282eb84a)
+
