--- a/07-敏捷开发：用户故事估算方法介绍.md
+++ b/07-敏捷开发：用户故事估算方法介绍.md
@@ -2,17 +2,46 @@
 
 ## 估算介绍
 
-用户故事的开发工作量，如何估算一个用户故事开发工作量？估算开发任务工作量是一件很困难的事情，它需要考虑的因素有很多，包括故事的大小、业务复杂度、难度、业务规则、开发人员能力差异等等。
+在以前开发 IT 软件时，使用较多的衡量软件开发工作量的单位是：小时、人天 或 人月。它是预估开发时间。比如：这个功能张三一个人开发需要 3 天时间完成。
 
-虽然很困难，但还是有一些估算的方法，帮助 Scrum 团队对开发任务进行高效估算。下面介绍几种估算的方法。
+这种 “人天” 估算只是 “理想人天” 的估算，有时与实际开发完成所需天数有很大差别。因为每个人完成同样复杂度工作所需的时间是不同的。
+
+那在敏捷 Scrum 框架中，用户故事的开发工作量，如何估算一个用户故事开发工作量？估算开发任务工作量是一件很困难的事情，它需要考虑的因素有很多，包括：
+- 用户故事的规模大小
+- 业务复杂度、难度
+- 业务规则复杂度
+- 开发人员能力大小、个体差异
+- 团队成员休假、有事请假等突发因素
+
+等等各种因素。
+
+虽然很困难，但是智慧的人们还是给出了一些估算的方法，帮助 Scrum 团队对开发任务进行估算。下面介绍几种估算的方法。
 
 估算在 Scrum 的哪个环节呢？
 
 >一般在 Sprint 计划会议上。
 >当产品负责人和 Scrum 团队人员选择好了 Sprint backlog 里的待开项，也对大的开发项进行了拆分。对不理解的一些开发项，相关负责人也进行了解释，团队成员理解也达成了一致。这时就可以进行开发任务工作量的估算了。
 
+## 故事点Story Point
+
+### 故事点介绍
+
+什么是故事点 Story Point？
+> 故事点是一个度量单位，完成某项开发任务所有工作量的估算结果。被估算的不是花费的时间长短，而是工作量多少。
+
+故事点一般用来衡量用户故事或任务的**工作量、复杂度和不确定性**，它不是传统的估算方法：小时 或 人天。它不依赖具体的开发人员或开发速度，更多强调团队内部讨论，协商一致性和相对估算。
+
+不同于预估完成任务所需时间长短，故事点关注的重点是复杂度和不确定性。
+
+它是一个相对度量单位，一般是相对于基准故事。
+
+在做故事点度量估算时，会选择一个基准故事（一个已知大小和复杂度的故事）作为基准点来参考，其它故事相对这个基准故事来做度量，对故事工作量进行估算。
+然后额外考虑故事的复杂度因素、风险因素、不确定性因素，并且为这些额外的因素加上点数，这样估算出来的故事点数相对来说正确性就提高了许多。
+
+![故事点估算单位介绍](https://github.com/user-attachments/assets/9b29f798-0c06-4101-9a06-256d282eb84a)
+
 ![image](https://github.com/user-attachments/assets/8ba6eb96-f177-45e6-830a-6729237f9007)
 
 
-![故事点估算单位介绍](https://github.com/user-attachments/assets/9b29f798-0c06-4101-9a06-256d282eb84a)
+
 
