--- a/07-敏捷开发：用户故事估算方法介绍.md
+++ b/07-敏捷开发：用户故事估算方法介绍.md
@@ -129,8 +129,8 @@
 若每个成员对用户故事的估值差距不大，则记录下估值；
 若每个成员对用户故事的估值差距较大，说明大家对该用户故事的理解、价值没有达成共识，大家需要解释为什么这样估值？然后对估值结果进行讨论。
 
->例如第一轮估值亮牌结果为：3，3，8，13。这 4 个估值数明显 1 个偏大（与平均值对比），2 个偏小，大和小差距过大。平均值为 6.75，四舍五入为 7。 
- 两个估值数 3 过小（偏离平均值）的成员需要解释为什么这样估值？估值数 13 过大的成员也需要解释为什么？然后大家对给出的解释一起讨论，对需求开发不同认知点、怀疑的点进行讨论。
+> 例如第一轮估值亮牌结果为：3，3，8，13。这 4 个估值数明显 1 个偏大（与平均值对比），2 个偏小，大和小差距过大。平均值为 6.75，四舍五入为 7。 
+> 两个估值数 3 过小（偏离平均值）的成员需要解释为什么这样估值？估值数 13 过大的成员也需要解释为什么？然后大家对给出的解释一起讨论，对需求开发不同认知点、怀疑的点进行讨论。
 
 **讨论注意点：**
 
@@ -148,6 +148,25 @@
 
 团队成员需要在尽可能短时间内，达成一个一致的估值结果。
 
+## 其它估算方法介绍
 
+### 亲和估算（Affinity Estimating）
+
+亲和估算首先需要在一个白板或者墙上划分出不同的区域，每个区域代表一个工作量范围（同样可以用故事点来衡量），例如分为 “小（1 - 3 个故事点）”、“中（4 - 8 个故事点）”、“大（9 - 13 个故事点）” 等区域。
+
+然后将所有的用户故事写在卡片上，团队成员一起把这些卡片按照自己对用户故事工作量的判断，放置到相应的区域中。在放置过程中，团队成员可以对每个用户故事进行简单讨论，确定其所属的工作量范围。
+
+**优点：** 相对来说估算比较快速，能够在短时间内对大量用户故事进行初步估算。帮团队成员整体上把握用户故事的规模。
+
+**缺点：** 它的估算精度相对较低，因为只是将用户故事划分到大概的工作量范围，没有像计划扑克那样精确到具体的数字。还有团队成员对工作量理解不一致，导致用户故事放置混乱，需要花时间重新讨论和调整。
+
+### 功能点数估算
+
+功能点估算方法是从用户的功能需求角度出发，通过计算用户故事中的功能点数来估算工作量。
+比如后台用户管理功能，可能有增加、删除、修改、搜索、查看用户详情等功能。
+
+**优点：** 以功能需求点为基础，比较客观，能一定程度上避免团队成员主观因素导致的估算偏差。它适用有详细需求文档的情况下，可以较准确估算工作量。
+
+**缺点：** 功能点估算方法需要对系统的功能有详细的分析和定义。计算功能点数需要一定的专业知识和经验，而且不同的人对功能点的计算标准可能会有差异。此外，它没有考虑到非功能因素（如性能要求、安全要求等）对工作量的影响，可能会导致估算结果不够全面
 
 
